# ghsched

./: Makefile  README.md  pyproject.toml  schedule.yaml
.github/workflows/: example-dir-example.yaml  example.yaml
example_dir/: example.sh
make/: make.py  task.jsonnet
src/: make.py
